--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "chai": "^3.5.0",
-    "nightwatch": "^0.9.12"
+    "nightwatch": "^0.9.12",
+    "source-map-support": "^0.4.11"
   }
 }
